--- a/config/database.yml
+++ b/config/database.yml
@@ -20,6 +20,8 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: postgres
+  password: raspberry
 
 development:
   <<: *default
@@ -58,6 +60,8 @@ development:
 test:
   <<: *default
   database: myapp_test
+  username: postgres
+  password: raspberry
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
 # ever seen by anyone, they now have access to your database.
@@ -80,5 +84,7 @@ test:
 production:
   <<: *default
   database: myapp_production
-  username: myapp
-  password: <%= ENV['MYAPP_DATABASE_PASSWORD'] %>
+#  username: myapp
+#  password: <%= ENV['MYAPP_DATABASE_PASSWORD'] %>
+  username: postgres
+  password: raspberry
